<resources>
    <string name="app_name">MakeMemories</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_memory">Add Memory</string>
    <string name="memory_gallery">Memory Gallery</string>

    <string name="image_to_upload">Image To Upload</string>
    <string name="image_caption">Image Caption</string>
    <string name="image_description">Image Description</string>
    <string name="add">Add</string>
    <string name="memory_images">memory images</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image_selected">image_selected</string>
    <string name="delete">delete</string>
    <string name="memory_deleted">Memory Deleted Successfully</string>
    <string name="image_path">drawable/memo.jpg</string>
    <string name="undo">UNDO</string>
</resources>
